v2.1.3: fix English README link in Chinese version's; separate tabbar & protyle's spacing calculation; fix FWD superblocks related css that causes lag in tabbar scrolling & inline memo's hover animation

--- a/style/features/custom-properties.scss
+++ b/style/features/custom-properties.scss
@@ -124,27 +124,27 @@ body:not([style*='-webkit-print-color-adjust']) {
         &[custom-asri-full-width-display~="sb"]>.sb[data-sb-layout="col"]:not([custom-asri-full-width-display="off"]),
         >.sb[data-sb-layout="col"][custom-asri-full-width-display="on"] {
             > :first-child {
-                margin-left: calc(var(--protyle-spacing)*-1);
+                margin-left: calc(var(--protyle-spacing)*-1 + min(24px, var(--protyle-spacing)));
 
-                >*,
-                .sb,
-                .bq,
-                .render-node {
-                    border-top-left-radius: 0;
-                    border-bottom-left-radius: 0;
-                }
+                // >*,
+                // .sb,
+                // .bq,
+                // .render-node {
+                //     border-top-left-radius: 0;
+                //     border-bottom-left-radius: 0;
+                // } // ❓ 为什么这里又没事？？
             }
 
             > :nth-last-child(1 of [data-node-id]) {
-                margin-right: calc(var(--protyle-spacing)*-1);
+                margin-right: calc(var(--protyle-spacing)*-1 + min(24px, var(--protyle-spacing)));
 
-                >*,
-                .sb,
-                .bq,
-                .render-node {
-                    border-top-right-radius: 0;
-                    border-bottom-right-radius: 0;
-                }
+                // >*,
+                // .sb,
+                // .bq,
+                // .render-node {
+                //     border-top-right-radius: 0;
+                //     border-bottom-right-radius: 0;
+                // } // ❓ 为什么这个声明会导致 tabbar 滚动卡顿 + 行内备注 hover 状态取消时动画卡顿？？
             }
 
             // > .sb:first-child {
